# TakeoutExifOrganizer

./: .gitignore  README.md  SPEC.MD  main.py  organize_photos.py  organize_photos.sh  pyproject.toml  requirements.txt
takeout_import/: file_organizer.py  media_metadata.py  media_processor.py  media_type.py  metadata_handler.py  persistence_manager.py  utils.py
tests/: __init__.py  media_helper.py  test_all_formats.py  test_bulk_operations.py  test_file_organizer.py  test_media_processor.py  test_metadata_handler.py  test_metadata_keys.py  test_persistence.py  test_processor.py  test_system.py
