[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "takeout_import"
version = "0.1.0"
description = "A tool to organize Google Takeout photos and fix metadata"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyExifTool",
]

[project.urls]
"Homepage" = "https://github.com/jkinzer/TakeoutExifImport"

[tool.setuptools.packages.find]
include = ["takeout_import*"]
exclude = ["out*", "tests*", "venv*"]
